# ckanext-langkattheme

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/langkattheme/: ckan_dataset.yaml
ckanext/langkattheme/assets/: langkattheme.css  langkattheme.js
ckanext/langkattheme/logic/: auth.py  validators.py
ckanext/langkattheme/templates/: base.html  footer.html
ckanext/langkattheme/templates/admin/: index.html
ckanext/langkattheme/templates/group/: base_form_page.html  edit.html
ckanext/langkattheme/templates/group/snippets/: group_form.html  helper.html
ckanext/langkattheme/templates/home/: index.html  layout3.html
ckanext/langkattheme/templates/home/snippets/: banner.html
ckanext/langkattheme/templates/organization/: base_form_page.html  edit.html  new.html
ckanext/langkattheme/templates/package/: base_form_page.html  new_package_form.html  read.html  resource_read.html
ckanext/langkattheme/templates/snippets/: facet_list.html  organization.html
ckanext/langkattheme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/langkattheme/tests/logic/: test_auth.py
ckanext/pstheme/: cli.py  helpers.py  plugin.py  views.py
ckanext/pstheme/assets/: pstheme.css  webassets.yml
ckanext/pstheme/logic/: action.py  schema.py
ckanext/pstheme/public/favicon/: manifest.json
ckanext/pstheme/templates/: base.html  header.html
ckanext/pstheme/templates/admin/: config.html
ckanext/pstheme/templates/group/: index.html  new.html  read_base.html
ckanext/pstheme/templates/home/: about.html
ckanext/pstheme/templates/organization/: edit_base.html  index.html  read_base.html
ckanext/pstheme/templates/snippets/: pstheme_custom_form_fields.html  search_result_text.html
ckanext/pstheme/templates/user/: edit.html
ckanext/pstheme/tests/logic/: test_action.py  test_validators.py
(+13 files in other folders)
